--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>  
-        <h1>Vai ser uma imagem aqui</h1>
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
+    <header  class="cabecalho">
+        <img class="cabecalho-imagem" src="https://s2.glbimg.com/nIqfLY3zjr8JntK_zMS9QxXFaZk=/e.glbimg.com/og/ed/f/original/2020/09/05/alfons-morales-ylswjsy7stw-unsplash.jpg" alt="booksworlds">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
     
