--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header  class="cabecalho">
-        <img class="cabecalho-imagem" src="https://s2.glbimg.com/nIqfLY3zjr8JntK_zMS9QxXFaZk=/e.glbimg.com/og/ed/f/original/2020/09/05/alfons-morales-ylswjsy7stw-unsplash.jpg" alt="booksworlds">
+    <header class="cabecalho">  
+        <img class="cabecalho.imagem" src="imagemlivro.jpg" alt="logo da booksworld">
         <ul class="cabecalho-lista">
-            <li class="cabecalho-lista-item">Escola</li>
-            <li class="cabecalho-lista-item">Estudante</li>
+            <li class="cabecalho-lista-item">Livros</li>
+            <li class="cabecalho-lista-item">Resenhas</li>
         </ul>
     </header>
-    
+    <section class="Booksworld">
+        <div class="Booksworld-div-conteudo">
+            <h2 class="Booksworld-titulo">Sobre a Booksworld</h2>
+            <p class="Booksworld-texto-um">A Booksworld é um site feito pensando primeiramente e unicamente no leitor.</p>
+            <p class="Booksworld-texto-dois">Com preços acessíveis, aqui você encontrará livros baratos para comprar em Epub, e também para encomendar livros físicos que foram  doados, com a intenção de serem vendidos em um preço acessível ao leitor.</p>
+
+        </div>
+         <img class="Booksworld-imagem" src="ilustracao.png" alt="Menina tocando o Planeta.">
+    </section>
 </body>
+
 </html>
