--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <header class="cabecalho">  
-        <img class="cabecalho.imagem" src="imagemlivro.jpg" alt="logo da booksworld">
+        <img class="cabecalho.imagem" src="imagemlogo.jpeg" alt="logo da booksworld">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Livros</li>
             <li class="cabecalho-lista-item">Resenhas</li>
@@ -24,6 +23,9 @@
 
         </div>
          <img class="Booksworld-imagem" src="ilustracao.png" alt="Menina tocando o Planeta.">
+    </section>
+    <section class="Generos">
+        <h2 class="genero titulo">Gêneros Literários</h2> 
     </section>
 </body>
 
