--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
     </section>
     <section class="Generos">
         <h2 class="genero titulo">Gêneros Literários</h2> 
+        <div class="genero-div">
+            <img class="genero-ficcaoimagem" src="Genero 1.jpg" alt="foto ficcao cientifica">
+            <h3 class="genero-nome">Ficção Científica</h3>
+            <img class="genero-icone" src="abra-o-livros.png" alt="icone de livro">    
+            <img class="genero-icone" src="correspondencia-enviada.png" alt="icone de envio">
     </section>
 </body>
-
 </html>
